# simplejsonspider

./: .gitignore  MANIFEST.in  README.md  RELEASE_NOTES.md  USAGE_GUIDE.md  example_usage.py  final_test.py  pyproject.toml  release.py  setup.cfg  setup.py  test_real_usage.py
.github/workflows/: ci.yml  release.yml
simplejsonspider/: __init__.py  _version.py  file_detector.py  spider.py
simplejsonspider.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_file_detector.py  test_spider.py
